--- a/ui/recent.html
+++ b/ui/recent.html
@@ -1,22 +1,17 @@
 <html>
 <head>
-<!--<style>
-	.livesearch li a:visited, a:link, a:hover, a:active{
-		color:#FFFFFF;
-		text-decoration: none !important;
-		width:600px;
-		display: inline-block;
-	}
-		</style>
-<link href = "/ui/recent.css" rel ="stylesheet" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
-	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />-->
-		</head>
+	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
+	<link href = "/ui/recent.css" rel ="stylesheet" />
+</head>
+
 <body>
+<div class = "recent_rev">
 RECENT REVIEWS
-
-<ul id="recent_list">
-
+</div>
+<ul class="recent_list">
+<div id="list_reviews">
+</div>
 </ul>
 
 <script src="/ui/recent.js" type = "text/javascript"> 
