--- a/ui/write-review.html
+++ b/ui/write-review.html
@@ -9,6 +9,19 @@ Review for
 </head>
 <body>
 
+<div class="tab_bar">
+<ul class="navi">
+		
+		<li>
+			<a href="/recent"> RECENT REVIEWS </a>
+		</li>
+		<li>
+			<a href="#">USER</a>
+		</li>
+		
+</ul>
+</div>
+
 <div class = "col-sm-3">
 	<div class = "poster">
 		<img src = "" id = "poster">
