--- a/ui/browse.html
+++ b/ui/browse.html
@@ -21,7 +21,7 @@
 			<a href="/recent"> RECENT REVIEWS </a>
 		</li>
 		<li>
-			<a href="#">USER</a>
+			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
 		
 </ul>
