--- a/ui/movie.html
+++ b/ui/movie.html
@@ -1,14 +1,8 @@
 <html>
 <head>
-<link href = "/ui/write-review.css" rel ="stylesheet" type = "text/css" />
-	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
-	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
-<title id = "review_title"> 
-Review for 
-</title>
+<title id='movie_title'>Loading... | Cinehub</title>
 </head>
 <body>
-
 <div class="tab_bar">
 <ul class="navi">
 		
@@ -16,7 +10,7 @@ Review for
 			<a href="/recent"> RECENT REVIEWS </a>
 		</li>
 		<li>
-			<a href="#">USER</a>
+			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
 		
 </ul>
@@ -26,11 +20,12 @@ Review for
 	<div class = "poster">
 		<img src = "" id = "poster">
 	</div>
+	<input type="submit" id= "writerevbutton" class="writerevbutton" value ="Write Your Own Review">
 </div>
 
 <div class = "col-sm-9">
 
-	<ul class="text-details">
+	<ul class="movie-details">
 		<li>
 		<h3><div class = "movie_name" id = "movie_name"></div> </h3>
 			
@@ -66,19 +61,12 @@ Review for
 		</li>
 	<li>
 	<br>
-	<div class = "submit-review">
-		<textarea id = "review" placeholder = "Write your review here">
-		</textarea>
-		<br>
-		<input type="submit" value="Submit" id = "submit_btn" class ="submit_btn">
-	</div>
-	</li>
-	</ul>
+<div id="list_reviews">
+</div>
+</li>
+</ul>
 </div>
 
-
-
-<script type = "text/javascript" src = "/ui/write-review.js">
-</script>
+<script src='/ui/movie.js' type='text/javascript'></script>
 </body>
 </html>
