--- a/ui/write-review.html
+++ b/ui/write-review.html
@@ -16,7 +16,7 @@ Review for
 			<a href="/recent"> RECENT REVIEWS </a>
 		</li>
 		<li>
-			<a href="#">USER</a>
+			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
 		
 </ul>
@@ -60,7 +60,7 @@ Review for
 		<br>
 		<br>
 		<li>
-			Overview <span class = "description" id = "description"></span>
+			Overview <div class = "description" id = "description"></div>
 			
 			<br>
 		</li>
