--- a/ui/movie.html
+++ b/ui/movie.html
@@ -1,7 +1,12 @@
 <html>
 <head>
 <title id='movie_title'>Loading... | Cinehub</title>
+
+	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
+	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
+	<link href = "/ui/movie.css" rel ="stylesheet" />
 </head>
+
 <body>
 <div class="tab_bar">
 <ul class="navi">
@@ -15,7 +20,6 @@
 		
 </ul>
 </div>
-
 <div class = "col-sm-3">
 	<div class = "poster">
 		<img src = "" id = "poster">
@@ -55,7 +59,7 @@
 		<br>
 		<br>
 		<li>
-			Overview <span class = "description" id = "description"></span>
+			Overview: <div class = "description" id = "description"></div>
 			
 			<br>
 		</li>
@@ -67,6 +71,6 @@
 </ul>
 </div>
 
-<script src='/ui/movie.js' type='text/javascript'></script>
+<script src="/ui/movie.js" type="text/javascript"></script>
 </body>
 </html>
