--- a/ui/recent.html
+++ b/ui/recent.html
@@ -6,6 +6,20 @@
 </head>
 
 <body>
+
+<div class="tab_bar">
+<ul class="navi">
+		
+		<li>
+			<a href="/recent"> RECENT REVIEWS </a>
+		</li>
+		<li>
+			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
+		</li>
+		
+</ul>
+</div>
+
 <div class = "recent_rev">
 RECENT REVIEWS
 </div>
