--- a/ui/register.html
+++ b/ui/register.html
@@ -19,7 +19,7 @@
       <input placeholder="Password" id="password" type="password" tabindex="2" />
     </fieldset>
     <fieldset>
-      <input placeholder="Name" id ="name" type="text" tabindex="3" />
+      <input placeholder="Name" id ="name1" type="text" tabindex="3" />
     </fieldset>
     <fieldset>
       <input placeholder="Email" id="email" type="email" tabindex="4" />
