--- a/ui/write-review.html
+++ b/ui/write-review.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<link href = "/ui/write-review.css" rel ="stylesheet" type = "text/css" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
 	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
+	<link href = "/ui/write-review.css" rel ="stylesheet" type = "text/css" />
 <title id = "review_title"> 
 Review for 
 </title>
@@ -67,8 +67,7 @@ Review for
 	<li>
 	<br>
 	<div class = "submit-review">
-		<textarea id = "review" placeholder = "Write your review here">
-		</textarea>
+		<textarea id = "review" placeholder = " Write your review here..."></textarea>
 		<br>
 		<input type="submit" value="Submit" id = "submit_btn" class ="submit_btn">
 	</div>
