MADE MAJOR CHANGES. FINAL TOUCHES

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -22,6 +22,8 @@
 		<li>
 			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
+
+<li> <a href="/logout">LOGOUT</a></li>
 		
 </ul>
 </div>
