--- a/ui/index.html
+++ b/ui/index.html
@@ -1,13 +1,16 @@
 	<html>
 	<head>
-	<link href = "/ui/style.css" rel ="stylesheet" />
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
 	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
-	<title> Welcome </title>
+	<link href = "/ui/style.css" rel ="stylesheet" />
+	<title> Welcome to Cinehub </title>
 	</head>
 	<body>
-	<div class="container">  
+
+	<div class="container">
+		 
   	<div id="login">
+
     <h3>Login</h3>
     <h4>Login for a cinema journey</h4>
     <fieldset>
