--- a/ui/review.html
+++ b/ui/review.html
@@ -19,6 +19,8 @@ Loading... | TuhinHub
 		<li>
 			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
+		<li> <a href="/logout">LOGOUT</a></li>
+
 		
 </ul>
 </div>
