--- a/ui/write-review.html
+++ b/ui/write-review.html
@@ -18,6 +18,8 @@ Review for
 		<li>
 			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
+		<li> <a href="/logout">LOGOUT</a></li>
+
 		
 </ul>
 </div>
