--- a/ui/movie.html
+++ b/ui/movie.html
@@ -17,6 +17,8 @@
 		<li>
 			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
+		<li> <a href="/logout">LOGOUT</a></li>
+
 		
 </ul>
 </div>
