--- a/ui/recent.html
+++ b/ui/recent.html
@@ -11,7 +11,7 @@
 <ul class="navi">
 		
 		<li>
-			<a href="/recent"> RECENT REVIEWS </a>
+			<a href="/browse"> BROWSE MOVIES </a>
 		</li>
 		<li>
 			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
