--- a/ui/movie.html
+++ b/ui/movie.html
@@ -26,7 +26,7 @@
 	<div class = "poster">
 		<img src = "" id = "poster">
 	</div>
-	<input type="submit" id= "writerevbutton" class="writerevbutton" value ="Write Your Own Review">
+	<input type="submit" id= "writerevbutton" class="writerevbutton" value ="Write A Review">
 </div>
 
 <div class = "col-sm-9">
@@ -65,8 +65,10 @@
 			
 			<br>
 		</li>
+		</ul>
+
+<ul class = "reviewuser">
 	<li>
-	<br>
 <div id="list_reviews">
 </div>
 </li>
