--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,9 @@
 	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
 	<link href = "/ui/style.css" rel ="stylesheet" />
 	<title> Welcome to Cinehub </title>
+	<meta property = "og:title" content = "Cinehub"/>
+	<meta property = "og:url" content = "http://tuhinsherlock.imad.hasura-app.io"/>
+	<meta property = "og:description" content = "Quench your Cinema Thirst"/>
 	</head>
 	<body>
 
