--- a/ui/movie.html
+++ b/ui/movie.html
@@ -14,6 +14,7 @@
 		<li>
 			<a href="/recent"> RECENT REVIEWS </a>
 		</li>
+		<li> <a href = "/browse"> BROWSE MOVIES </a></li>
 		<li>
 			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
