--- a/ui/review.html
+++ b/ui/review.html
@@ -16,9 +16,11 @@ Loading... | TuhinHub
 		<li>
 			<a href="/recent"> RECENT REVIEWS </a>
 		</li>
+		<li> <a href = "/browse"> BROWSE MOVIES </a></li>
 		<li>
 			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
+
 		<li> <a href="/logout">LOGOUT</a></li>
 
 		
