--- a/ui/movie.html
+++ b/ui/movie.html
@@ -16,9 +16,9 @@
 		</li>
 		<li> <a href = "/browse"> BROWSE MOVIES </a></li>
 		<li>
-			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
+			<a href="#" id='userlink'><span id='tabbar_username'></span></a>
 		</li>
-		<li> <a href="/logout">LOGOUT</a></li>
+		<div id = "logout"></div>
 
 		
 </ul>
