--- a/ui/review.html
+++ b/ui/review.html
@@ -21,7 +21,7 @@ Loading... | TuhinHub
 			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
 		</li>
 
-		<li> <a href="/logout">LOGOUT</a></li>
+		<div id = "logout"></div>
 
 		
 </ul>
