--- a/ui/browse.html
+++ b/ui/browse.html
@@ -20,7 +20,7 @@
 			<a href="/recent"> RECENT REVIEWS </a>
 		</li>
 		<li>
-			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
+			<a href="#" id='userlink'><span id='tabbar_username'></span></a>
 		</li>
 
 <li> <a href="/logout">LOGOUT</a></li>
