--- a/ui/recent.html
+++ b/ui/recent.html
@@ -14,9 +14,9 @@
 			<a href="/browse"> BROWSE MOVIES </a>
 		</li>
 		<li>
-			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
+			<a href="#" id='userlink'><span id='tabbar_username'></span></a>
 		</li>
-		<li> <a href="/logout">LOGOUT</a></li>
+		<div id = "logout"></div>
 
 		
 </ul>
