--- a/ui/write-review.html
+++ b/ui/write-review.html
@@ -16,9 +16,9 @@ Review for
 			<a href="/recent"> RECENT REVIEWS </a>
 		</li>
 		<li>
-			<a href="#" id='userlink'><span id='tabbar_username'>USER</span></a>
+			<a href="#" id='userlink'><span id='tabbar_username'></span></a>
 		</li>
-		<li> <a href="/logout">LOGOUT</a></li>
+		<div id = "logout"></div>
 
 		
 </ul>
