[imad-console] Updates ui/browse.html

--- a/ui/browse.html
+++ b/ui/browse.html
@@ -41,6 +41,8 @@ SEARCH A MOVIE
 </div>
 </ul>
 </div>
+
+<img src = "https://www.themoviedb.org/assets/bb45549239e25f1770d5f76727bcd7c0/images/v4/logos/408x161-powered-by-rectangle-blue.png" id = "tmdb">
 <script src="/ui/browse.js" type = "text/javascript"> 
 </script>
 </body>
