--- a/ui/movie.html
+++ b/ui/movie.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title id='movie_title'>Loading... | Cinehub</title>
+<title id='htmltitle'>Loading... | Cinehub</title>
 
 	<link href = "/ui/bootstrap.css" rel = "stylesheet" />
 	<link href = "http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet" />
