--- a/ui/write-review.html
+++ b/ui/write-review.html
@@ -15,6 +15,7 @@ Review for
 		<li>
 			<a href="/recent"> RECENT REVIEWS </a>
 		</li>
+		<li> <a href = "/browse"> BROWSE MOVIES </a></li>
 		<li>
 			<a href="#" id='userlink'><span id='tabbar_username'></span></a>
 		</li>
